--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,6 @@
 <footer class="footer">
   <p>
-    &copy; 2021 Designed & Developed by
-    <span class="highlight-link">
-      James Smith
-    </span>.
-    Original Template by
+    &copy; © 2020 Designed & Developed by
     <a class="highlight-link" href="https://longpdo.github.io/" target="_blank" rel="noreferrer">
       Long Do
     </a>
