--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,48 +1,26 @@
-<footer class="footer">
-  <p>
-    &copy; 2020 Designed & Developed by
-    <a class="highlight-link" href="https://longpdo.github.io/" target="_blank" rel="noreferrer">
-      Long Do
-    </a>
-  </p>
-  <p>
-    Built with
-    <a class="highlight-link" href="https://jekyllrb.com/"target="_blank" rel="noreferrer">
-      Jekyll
-    </a>
-    and powered by
-    <a class="highlight-link" href="https://pages.github.com/" target="_blank" rel="noreferrer">
-      Github Pages
-    </a>
-  </p>
-</footer>
+<div class="wrapper">
+    <h2 class="foooter-heading">{{ site.title | escape }}</h2>
 
-<!-- Google Analytics -->
-{% if site.google-analytics %}
-<script>
-  var dnt = navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack;
-  if (dnt != "1" && dnt != "yes") {
-    (function (i, s, o, g, r, a, m) {
-      i["GoogleAnalyticsObject"] = r;
-      (i[r] =
-        i[r] ||
-        function () {
-          (i[r].q = i[r].q || []).push(arguments);
-        }),
-        (i[r].l = 1 * new Date());
-      (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
-      a.async = 1;
-      a.src = g;
-      m.parentNode.insertBefore(a, m);
-    })(
-      window,
-      document,
-      "script",
-      "https://www.google-analytics.com/analytics.js",
-      "ga"
-    );
-    ga("create", "{{ site.google-analytics.id }}", "auto");
-    ga("send", "pageview");
-  }
-</script>
-{% endif %}
+    <div class="footer-col-wrapper">
+        <div class="footer-col footer-col-1">
+            <ul class="contact-list">
+                <li class="p-name">
+                    {%- if site.author -%}
+                        {{ site.author | escape }}
+                    {%- else -%}
+                        {{ site.title | escape }}
+                    {%- endif -%}
+                </li>
+            </ul>
+        </div>
+
+        <div class="footer-col footer-col-2">
+            <ul class="social-media-list">
+                {%- if site.github_username -%}<li><a href="https://github.com/{{ site.github_username| cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#github' | relative_url }}"></use></svg> <span class="username"></span></a></li>{%- endif -%}
+                {%- if site.linkedin_username -%}<li><a href="https://www.linkedin.com/in/{{ site.linkedin_username| cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#linkedin' | relative_url }}"></use></svg> <span class="username"></span></a></li>{%- endif -%}
+                {%- if site.twitter_username -%}<li><a href="https://www.twitter.com/{{ site.twitter_username| cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#twitter' | relative_url }}"></use></svg> <span class="username"></span></a></li>{%- endif -%}
+                {%- if site.youtube_username -%}<li><a href="https://youtube.com/{{ site.youtube_username| cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#youtube' | relative_url }}"></use></svg> <span class="username"></span></a></li>{%- endif -%}
+            </ul>              
+        </div>
+    </div>
+</div>
