--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,16 +11,16 @@
   
           <ul class="nav">
             <li>
-              <a class="page-link" href="/">Home</a>
+              <a class="page-link" href="{{ site.baseurl }}/">Home</a>
             </li>
             <li>
-              <a class="page-link" href="/blog/">Blog</a>
+              <a class="page-link" href="{{ site.baseurl }}/blog/">Blog</a>
             </li>
             <li>
-              <a class="page-link" href="/projects/">Projects</a>
+              <a class="page-link" href="{{ site.baseurl }}/projects/">Projects</a>
             </li>
             <li>
-              <a class="page-link" href="/about/">About</a>
+              <a class="page-link" href="{{ site.baseurl }}/about/">About</a>
             </li>
           </ul>
 
