--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,13 +14,13 @@
               <a class="page-link" href="{{ site.baseurl }}/">Home</a>
             </li>
             <li>
-              <a class="page-link" href="{{ site.baseurl }}/blog/">Blog</a>
+              <a class="page-link" href="{{ site.baseurl }}/blog">Blog</a>
             </li>
             <li>
-              <a class="page-link" href="{{ site.baseurl }}/projects/">Projects</a>
+              <a class="page-link" href="{{ site.baseurl }}/projects">Projects</a>
             </li>
             <li>
-              <a class="page-link" href="{{ site.baseurl }}/about/">About</a>
+              <a class="page-link" href="{{ site.baseurl }}/about">About</a>
             </li>
           </ul>
 
