--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="breadcrumbs">
-    <a href="/">Home</a>><a href="/{{site.baseurl}}{{page.categories}}/">{{page.categories}}</a>><a style="pointer-events: none"></a>{{page.title}}</a>
+    <a href="/">Home</a>><a href="/{{site.baseurl}}{{page.categories}}">{{page.categories}}</a>><a style="pointer-events: none"></a>{{page.title}}</a>
 </div>
 
 <div><h1>{{page.title}}</h1></div>
