--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,9 @@
       </div>
     </main>
     
-    {% include footer.html %}
+    <div class="site-footer">
+      {% include footer.html %}
+    </div>
+    
   </body>
 </html>
