--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -108,6 +108,7 @@
   .site-footer {
     border-top: 1px solid $grey-color-dark;
     padding: $spacing-unit 0;
+    width: 100%;
   }
   
   .footer-heading {
