--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
-<div class="wrapper center">
-    <!-- <h2 class="foooter-heading">{{ site.title | escape }}</h2> -->
+<!-- <div class="wrapper center">
+    <h2 class="foooter-heading">{{ site.title | escape }}</h2>
 
     <div class="footer-col-wrapper">
-        <!-- <div class="footer-col footer-col-1">
+        <div class="footer-col footer-col-1">
             <ul class="contact-list">
                 <li class="p-name">
                     {%- if site.author -%}
@@ -14,11 +14,17 @@
             </ul>
         </div> -->
 
-        <div class="center">
+        <!-- <div class="center">
             <ul class="social-media-list">
                 {%- if site.github_username -%}<li><a href="https://github.com/{{ site.github_username| cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#github' | relative_url }}"></use></svg> <span class="username">{{site.github_username}}</span></a></li>{%- endif -%}
                 {%- if site.linkedin_username -%}<li><a href="https://www.linkedin.com/in/{{ site.linkedin_username| cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#linkedin' | relative_url }}"></use></svg> <span class="username">{{site.author}}</span></a></li>{%- endif -%}
             </ul>              
         </div>
     </div>
-</div>
+</div> -->
+
+<footer>
+    <div class="wrapper center container">
+      <p>&copy; {{ site.time | date: '%Y' }} {{ site.title }}. All rights reserved.</p>
+    </div>
+</footer>
