--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,28 +1,58 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    {%- seo -%}
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/main.css" | relative_url }}">
-    {%- feed_meta -%}
-    {%- if jekyll.environment == 'production' and site.google_analytics -%}
-      {%- include google-analytics.html -%}
-    {%- endif -%}
-  </head>
-  <body>
-    {% include header.html %}
-    
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </main>
-    
-    <div class="site-footer">
-      {% include footer.html %}
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{{ page.title }}</title>
+  <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
+<body>
+  <header>
+    <!-- <button id="theme-toggle" class="mode-toggle" aria-label="Toggle light/dark mode">
+      <span class="icon">🌙</span>
+    </button> -->
+  </header>
+<!-- Introduction Section -->
+ <div id="retro-background">
+<section id="introduction">
+  <div class="container">
+    <h1>{{ site.title }}</h1>
+    <p>{{ site.description }}</p>
+    <!-- <img src="path_to_your_profile_picture.jpg" alt="Your Name" class="profile-picture"> -->
+  </div>
+</section>
+
+<!-- Navigation Menu -->
+<nav>
+  
+  <ul>
+    <li><button class="button" id="load-home">Home</button></li>
+    <!-- <li><button class="button" id="load-games">Games</button></li> -->
+    <li><button class="button" id="load-about">About</button></li>
+  </ul>
+</nav>
+
+  <!-- Your content here -->
+  
+    <div id="content">
+      {{ content }}
     </div>
-    
-  </body>
+
+  <!-- Contact Information -->
+<section id="contact-info">
+  <div class="container">
+    <h2>Contact Me</h2>
+    <ul class="social-links">
+      <li><a href="mailto:jamessmith94135@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/james-s-66067b176/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+      <!-- <li><a href="https://github.com/yourprofile" target="_blank">GitHub</a></li>
+      <li><a href="https://twitter.com/yourprofile" target="_blank">Twitter</a></li> -->
+    </ul>
+  </div>
+</section>
+</div>
+  <!-- <script src="{{ "/assets/index.js" | relative_url }}"></script> -->
+  <script src="{{ base.url | prepend: site.url }}/assets/js/index.js"></script>
+</body>
 </html>
